--- a/kafka-lab-2/src/main/resources/application.properties
+++ b/kafka-lab-2/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages: *
 spring.kafka.producer.bootstrap-servers: 127.0.0.1:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+
+spring.kafka.topic.name = chennai
+spring.kafka.topic_json.name=chennai_json
