--- a/kafka-wikimedia-db/kafka-wikimedia-consumer-db/src/main/resources/application.properties
+++ b/kafka-wikimedia-db/kafka-wikimedia-consumer-db/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.kafka.consumer.group-id: wikimediaGroup
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value-serializer:org.apache.kafka.common.serialization.StringSerializer
+
+spring.datasource.url = jdbc:mysql://localhost:3306/wikimedia
+spring.datasource.username=root
+spring.datasource.password=Chennai@330
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.use_sql_comments=true
+spring.jpa.hibernate.format_sql=true
+
+spring.kafka.topic.name=wikimedia_recent_change
+spring.kafka.group-id = wikimediaGroup
